# omniglyph

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
glyph/: constants.py  main.py  shortcuts.py  window.py
glyph/db/: loader.py
glyph/db/collections/: arrows.json  currency.json  emojis.json  emoticons.json  hieroglyphs.json  math.json  special_symbols.json
glyph/services/: history.py
glyph/services/notification/: __init__.py  app_update.py  nerd_font.py
glyph/styles/: style.css
glyph/ui/: __init__.py  app_header.py  category_bar.py  char_view.py  search_bar.py  side_bar.py  symbol_grid.py
glyph/utils/: config.py
scripts/: build.sh  install.sh
